--- a/salesbackend/requirements.txt
+++ b/salesbackend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 Babel==2.9.1
 Django==3.2.9
+django-cors-headers==3.10.0
 django-money==2.1
 djangorestframework==3.12.4
 psycopg2==2.9.2
