--- a/salesfrontend/Dockerfile
+++ b/salesfrontend/Dockerfile
@@ -1,20 +1,12 @@
-# pull official base image
-FROM node:13.12.0-alpine
+FROM node:14.18-alpine 
 
-# set working directory
 WORKDIR /app
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json package.json
+COPY package-lock.json package-lock.json
 
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
 RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
 
-# add app
-COPY . ./
+COPY . .
 
-# start app
-CMD ["npm", "start"]
+CMD [ "npm","run","start" ]
